<resources>
    <string name="app_name">MobileComputingCms</string>
    <string name="post_title_help">Enter post title</string>
    <string name="post_title_label">Post Title</string>
    <string name="post_dec_label">Post Description</string>
    <string-array name="list_item_array" id="ayy">
        <item>Portal</item>
        <item>Post</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">World</string>
    <string name="tab_text_2">Business</string>
    <string name="tab_text_3">Technology</string>
    <string name="tab_text_4">Science</string>
    <string name="tab_text_5">Sports</string>
    <string name="action_add">Add</string>
    <string name="title_activity_portal">PortalActivity</string>

    <string name="todo">TODO</string>
    <string name="add_an_image">Add an image</string>
    <string name="enter_title_post">Enter title post</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_help">HelpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="portal_shortcut_long_label1">Open Portal</string>
    <string name="portal_shortcut_short_label1">Portal</string>

    <string name="title_activity_about">AboutActivity</string>
</resources>
