<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/post_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/post_title_in"
        android:contentDescription="@string/enter_title_post"
        android:text="@string/post_title_label" />

    <EditText
        android:id="@+id/post_title_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/post_title_label"
        android:inputType="textAutoComplete"
        android:hint="@string/post_title_help" />

    <TextView
        android:id="@+id/post_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/post_title_in"
        android:layout_marginTop="20dp"
        android:text="@string/post_dec_label"
        android:labelFor="@+id/post_desc_in" />

    <EditText
        android:id="@+id/post_desc_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:minHeight="100dp"
        android:maxHeight="200dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/post_desc_label"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_below="@+id/post_desc_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/image_chooser"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:onClick="selectImage"
            android:scaleType="center"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            android:contentDescription="@string/add_an_image"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:tint="#FFFF"
        android:src="@drawable/ic_check_black_24dp"
        app:elevation="2dp"
        android:clickable="true"
        android:onClick="submit"
        app:fabSize="auto"
        android:layout_margin="16dp" />

</RelativeLayout>
